TEST_PROGRAMS/VALID/05/empty_func.go
/* Empty function. */

package main

func f() {}

func main() {
	// Do nothing
}
