TEST_PROGRAMS/INVALID/04/104.go
package main

/* Nested comments
  /* Are not allowed */
*/

func main() {
}
